Made a change in the top of document

--- a/classes/class1/class1 niels.Rmd
+++ b/classes/class1/class1 niels.Rmd
@@ -6,7 +6,7 @@ output:
   html_document:
     toc: true
 ---
-
+HOLOLWOWLOW I made a change here, that I would like to commit to my github repo!
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
