--- a/GHV Exercises/GHV Exercises.Rmd
+++ b/GHV Exercises/GHV Exercises.Rmd
@@ -83,7 +83,7 @@ Probability distributions: Using a bar plot in R, graph the binomial distributio
 p = 0.3.
 ```{r - 3.5}
 n_3.5 <- 20
-p_3.5 <- 0.3
+p_3.5 <- 0.3 
 X_3.5 <- 0:n_3.5
 binom_3.5 <- dbinom(X_3.5, n_3.5, p_3.5)
 
@@ -156,22 +156,181 @@ mw_3.8 <- 63.7
 sd_h_3.8 <- 2.9
 sd_w_3.8 <- 2.7
 
+
+```
+
+
+#### Lecture 2 - Exercise Quantifying Uncertainty
+```{r - l2.1}
+n_l2 <- 20
+sigma_l2 <- 2
+mean_l2 <- 10
+l2_distribution <- rnorm(n_l2, mean_l2, sigma_l2)
+```
+
+```{r - l2.1}
+f_1 <- function(x){
+  1/(1*sqrt(2*pi))*exp((-1/2)*((x-0)/1)^2)
+}
+
+f_2 <- function(x){
+  sqrt(1/2*pi)*exp((-1*(x - 0)^2)/2)
+}
+
+f_2(-5:5)
+# now I want to add a third function with parameters mu = 2 and sigma = 1
+f_3 <- function(x){
+  1/(1*sqrt(2*pi))*exp((-1/2)*((x-2)/1)^2)
+}
+# Can you make a similar plot with the ggplot2 package?
+# I will try to make a similar plot with ggplot2
+library(ggplot2)
+x_values <- seq(-5, 5, 0.1)
+data_frame <- data.frame(x_values, f_1_values, f_2_values, f_3_values)
+ggplot(data = data_frame, aes(x = x_values)) + stat_function(fun = f_1, color = "blue") + stat_function(fun = f_2, color = "red") + stat_function(fun = f_3, color = "green") + 
+  labs(title = "Three Normal Distributions")
+
+
+# new version of function_1 with sigma = 3.0 and a new version with function_2 with sigma = 3.0. Both have a mean of 0
+f_1_v2 <- function(x){
+  1/(3*sqrt(2*pi))*exp((-1/2)*((x-0)/3)^2)
+}
+
+f_2_v2 <- function(x){
+  sqrt(3/2*pi)*exp((-3*(x - 0)^2)/2)
+}
+
+# plot them together using ggplot
+f_1_values_v2 <- f_1_v2(x_values)
+f_2_values_v2 <- f_2_v2(x_values)
+data_frame_v2 <- data.frame(x_values, f_1_values_v2, f_2_values_v2)
+ggplot(data = data_frame_v2, aes(x = x_values)) + stat_function(fun = f_1_v2, color = "blue") + stat_function(fun = f_2_v2, color = "red") + 
+  labs(title = "Two Normal Distributions with sigma = 3.0")
+
+```
+
+```{r - l2.2 - simulating switzerland my 7.0 and tau = 2}
+n_l2.2 <- 1000000
+my_l2.2 <- 7.0
+sigma_l2.2 <- 1/sqrt(2)
+normal_l2.2 <- rnorm(n_l2.2, my_l2.2, sigma_l2.2)
+
+sum(normal_l2.2 > 8.4) / n_l2.2 # here we find the sum of all people above 8.4 and divide that by the total amount of people and thus we get the proportion of people who will have a score above 8.4.
 ```
 
 
 
 
 
+# GHV - Chapter 4 Exercises
+#### Exercise 4.1 - Comparison of Proportions
+Comparison of proportions: A randomized experiment is performed within a survey. 1000
+people are contacted. Half the people contacted are promised a $5 incentive to participate, and
+half are not promised an incentive. The result is a 50% response rate among the treated group
+and 40% response rate among the control group. Give an estimate and standard error of the
+average treatment effect.
+```{r - 4.1 Comparison of Proportions}
+n_4.1 <- 1000
+n_treated_4.1 <- n_4.1/2
+n_control_4.1 <- n_4.1/2
+p_treated_4.1 <- 0.5
+p_control_4.1 <- 0.4
 
+# So I can see that giving $5 to someone increases the response rate by 10%. Does this mean the effect is 10%? No, because the control group might have been more difficult to get a hold of. That is true, but how do I calculate the average treatment effect? I think I need to calculate the difference in response rates and then calculate the standard error of the difference.
 
+r_diff <- p_treated_4.1 - p_control_4.1
 
+se_diff <- sqrt(p_treated_4.1*(1-p_treated_4.1)/n_treated_4.1 + p_control_4.1*(1-p_control_4.1)/n_control_4.1)
 
+se_diff
+```
+So the answer is 10% +/-3%
 
+#### Exercise 4.2 - Choosing a sample size
+Choosing sample size: You are designing a survey to estimate the gender gap: the difference in
+support for a candidate among men and women. Assuming the respondents are a simple random
+sample of the voting population, how many people do you need to poll so that the standard error
+is less than 5 percentage points?
+```{r - 4.2 Choosing a sample size}
+#0.05 <- sqrt((0.5(1-0.5))/n_tot + 0.5(1-0.5)/n_tot)
+#0.05 <- sqrt((0.5(0.5)/n_tot + (0.5(0.5))/n_tot)
+#0.05 <- sqrt(0.25/n_tot + 0.25/n_tot)
+#0.05 <- sqrt(2*0.25/n_tot*2)
+#0.05^2 <- 2*(0.25/n_tot/2)
+#0.0025 <- 2*(0.25/n_tot/2)
+#0.0025*n/2 <- 2*0.25
+#0.0025*n/2 <- 0.5
+#0.0025*n/2*2 <- 2*0.25*2 = 1
+#0.0025*n <- 1
+#n <- 1/0.0025
+#n <- 400
+#there we go, 400 people
+```
 
+#### Exercise 4.3 - Comparison of Proportions
+Comparison of proportions: You want to gather data to determine which of two students is a
+better basketball shooter. One of them shoots with 30% accuracy and the other is a 40% shooter.
+Each student takes 20 shots and you then compare their shooting percentages. What is the
+probability that the better shooter makes more shots in this small experiment?
+```{r - 4.3}
+n_4.3 <- 20
+p1_4.3 <- 0.3
+p2_4.3 <- 0.4
 
+# Initialize probability sum
+probability_sum <- 0
 
+# Iterate through possible successful shots by the first shooter
+for (x in 0:n_4.3) {
+  # Probability of the first shooter making 'x' shots
+  prob_first_shooter <- dbinom(x, size = n_4.3, prob = p1_4.3)
+  
+  # Probability of the second shooter making more than 'x' shots
+  # Since it's a discrete distribution, 'more than x' is equivalent to 'at least x+1'
+  prob_second_shooter_more <- 1 - pbinom(x, size = n_4.3, prob = p2_4.3)
+  
+  # Add to the cumulative probability
+  probability_sum <- probability_sum + (prob_first_shooter * prob_second_shooter_more)
+}
 
+# Print the result
+probability_sum
 
+## Another way to do it would be simulating it
+# Parameters
+n_shots <- 20
+p1 <- 0.30  # Accuracy of the first shooter
+p2 <- 0.40  # Accuracy of the second shooter
+n_simulations <- 10000  # Number of simulations
 
+# Simulate shots
+set.seed(123)  # For reproducibility
+first_shooter_results <- rbinom(n_simulations, n_shots, p1)
+second_shooter_results <- rbinom(n_simulations, n_shots, p2)
 
+# Calculate how often the second shooter scores more than the first
+success_second_more <- sum(second_shooter_results > first_shooter_results) / n_simulations
+
+# Print the probability
+success_second_more
+```
+
+#### Exercise 4.4 - Designing a basketball experiment
+Designing an experiment: You want to gather data to determine which of two students is a
+better basketball shooter. You plan to have each student take N shots and then compare their
+shooting percentages. Roughly how large does N have to be for you to have a good chance of
+distinguishing a 30% shooter from a 40% shooter?
+```{r - 4.4}
+#0.05 <- sqrt((0.3(1-0.3))/n_tot + 0.4(1-0.4)/n_tot)
+#0.05 <- sqrt(0.3(0.7)/n_tot) + 0.4(0.6)/n_total)
+#0.05 <- sqrt(0.21/n_tot + 0.24/n_tot)
+#0.05^2 <- 0.45/n_tot
+#0.0025*n_tot <- 0.45
+#n_tot <- 0.45/0.0025
+n_tot <- 0.45/0.0025
+n_tot
+```
+This is not necesarrily correct, I think it should be 10% and that I should use some packages like pwr to actually make a power calculation, but idk. 
+
+#### Exercise 4.5 - 
 
